# colorsnap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
headers/: utils.h
include/: utils.h
lib/stb_image/: stb_image.h
src/: colorsnap.cpp  utils.cpp
